# nafie-agents

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pytest.ini  requirements.txt
agents/analytics/analytics-agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  conftest.py  logging_config.py  metric_definitions.py  models.py  pyproject.toml  scheduler.py  state.py
agents/analytics/analytics-agent/api/: main.py
agents/analytics/analytics-agent/db/: __init__.py  attribution_store.py  connection.py  event_store.py  metric_store.py  outcome_store.py  pattern_store.py  report_store.py  signal_store.py
agents/analytics/analytics-agent/services/: __init__.py  helpscout_client.py  lemon_squeezy_client.py  product_registry.py  redis_bus.py  resend_client.py
agents/analytics/analytics-agent/tests/: conftest.py  test_batch_connection_usage.py  test_event_collector.py  test_signal_delivery.py  test_signal_generator.py
agents/analytics/analytics-agent/workflows/: __init__.py  attribution.py  event_collector.py  immediate_evaluator.py  metrics_engine.py  pattern_analyzer.py  reconciliation.py  report_generator.py  signal_generator.py
agents/content/content-agent/: .env.example  Dockerfile  agent.py  logging_config.py  models.py  pyproject.toml  pytest.ini  state.py
agents/content/content-agent/api/: __init__.py  main.py
agents/content/content-agent/db/: __init__.py  connection.py  content_registry.py  idempotency.py
agents/content/content-agent/listeners/: __init__.py  content_listener.py
agents/content/content-agent/nodes/: __init__.py  category_router.py  content_dispatcher.py  content_generator.py  content_planner.py  content_recorder.py  content_validator.py  context_enricher.py  evidence_gate.py  fact_normalizer.py  idempotency_check.py  registry_updater.py  request_receiver.py  review_gate.py  template_selector.py
agents/content/content-agent/services/: __init__.py  claude_client.py  redis_bus.py  resend_client.py
agents/content/content-agent/tests/: conftest.py  test_claude_client.py  test_content_dispatcher.py  test_content_listener.py
agents/marketing/marketing-agent/: .env.example  Dockerfile  README.md  agent.py  logging_config.py  models.py  pyproject.toml  state.py
agents/marketing/marketing-agent/api/: main.py
agents/marketing/marketing-agent/db/: __init__.py  campaign_log.py  connection.py  marketing_calendar.py
agents/marketing/marketing-agent/listeners/: __init__.py  analytics_listener.py  assets_listener.py  content_listener.py
agents/marketing/marketing-agent/nodes/: __init__.py  analytics_consumer.py  asset_collector.py  calendar_scheduler.py  campaign_recorder.py  channel_router.py  paid_channel_gate.py  platform_publisher.py  readiness_aggregator.py  rejection_handler.py
agents/marketing/marketing-agent/services/: __init__.py  facebook_client.py  instagram_client.py  redis_bus.py  resend_client.py  tiktok_client.py  whatsapp_client.py
agents/marketing/marketing-agent/tests/: conftest.py  test_analytics_consumer.py  test_calendar_scheduler.py  test_campaign_recorder.py  test_readiness_aggregator.py
agents/platform/platform-agent/: .env.example  Dockerfile  agent.py  logging_config.py  pyproject.toml  requirements.txt  state.py
agents/platform/platform-agent/api/: __init__.py  background.py  main.py
agents/platform/platform-agent/commerce/: __init__.py  webhook_handler.py
agents/platform/platform-agent/db/: __init__.py  connection.py  idempotency.py  registry.py
agents/platform/platform-agent/listeners/: launch_listener.py  update_listener.py
agents/platform/platform-agent/nodes/: __init__.py
agents/platform/platform-agent/services/: __init__.py  ls_client.py  redis_bus.py  resend_client.py  wp_client.py
agents/platform/platform-agent/templates/: inconsistency_alert.html  launch_confirmation.html  update_notification.html
agents/platform/platform-agent/tests/: conftest.py  test_contract_parser.py  test_launch_announcer.py  test_registry_proxy.py
agents/support/support-agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  config.py  conftest.py  listeners.py  logging_config.py  main.py  models.py  pyproject.toml  retrievers.py  state.py  support_agent.py
agents/support/support-agent/api/: __init__.py  main.py
agents/support/support-agent/db/: __init__.py  connection.py  escalation_log.py  execution_log.py  knowledge_log.py
agents/support/support-agent/nodes/: __init__.py  disclaimer_adder.py  escalation_handler.py  facebook_comment_processor.py  intent_classifier.py  knowledge_retriever.py  phone_reader.py  phone_retriever.py  phone_updater.py  post_classifier.py  risk_flagger.py  ticket_receiver.py  ticket_updater.py  twitter_consumer.py  webhook_handler.py
agents/support/support-agent/qdrant/: setup.sh
agents/support/support-agent/services/: __init__.py  claude_client.py  facebook_client.py  helpscout_client.py  qdrant_client.py  redis_bus.py  resend_client.py
agents/support/support-agent/tests/: conftest.py  test_disclaimer_adder.py  (+4 more)
agents/visual_production/visual-production-agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  config.py  logging_config.py  main.py  models.py  pyproject.toml  requirements.txt  state.py
supervisor/supervisor-agent/: .env.example  .gitignore  README.md  agent_registry.py  config.py  logging_config.py  main.py  models.py  policy_engine.py  pyproject.toml  redis_bus.py  requirements.txt  state.py  workflow_definitions.py
supervisor/supervisor-agent/api/: main.py
supervisor/supervisor-agent/db/: audit_store.py  conflict_store.py  connection.py  health_store.py  policy_store.py  workflow_store.py
supervisor/supervisor-agent/listeners/: __init__.py  command_listener.py  system_listener.py
supervisor/supervisor-agent/services/: redis_bus.py  resend_client.py
supervisor/supervisor-agent/tests/: test_db_lazy_store.py  test_listener_runtime.py
supervisor/supervisor-agent/workflows/: conflict_resolver.py  health_monitor.py  orchestrator.py  policy_enforcer.py  state_machine.py
(+145 files in other folders)
