[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "content-agent"
version     = "1.0.0"
description = "وكيل المحتوى — إنتاج النصوص العربية لمنصة نافع"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.2.0",
    "anthropic>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis[hiredis]>=5.0.3",
    "resend>=0.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "httpx"]
